5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1602_1016.log
== TEST (2019-04-02 22:24:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b-float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(area,5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b-float(input())
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:24:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(area,5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=(a+b+C)/2
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:24:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(area,5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=(a+b+C)/2
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:24:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(area,5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=(a+b+C)/2
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:25:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))8
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(area,5)
-- ERROR:
File "XXXX", line 7
    c=float(input())8
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:25:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(round(area,5)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:26:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=(a+b+C)/2
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:26:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+C)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=(a+b+C)/2
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:26:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+c)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(round(area,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 22:27:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+c)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(round(area,5))
-- EXECUTION TIME:
0.175064
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:32:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("lado a:"))
b=float(input("lado b:"))
c=float(input("ladoc:"))
s=(a+b+c)/2
area= sqrt(s*((s-a)*(s-b)*(s-c)))
print(round(area,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
